--- a/project/templates/legal/list/index.html
+++ b/project/templates/legal/list/index.html
@@ -36,7 +36,7 @@
 <h1 class="page-header"></h1>
   <ul class="nav" id="side-menu">
     <li class="sidebar-search">
-      <form method="post" action="#">
+      <form method="post" action="/legal/licenses/search.do">
         <div class="input-group custom-search-form">
           <input type="text" class="form-control" placeholder="Search for an open-source package." name="filter-form">
           <span class="input-group-btn">
