--- a/project/templates/legal/add/index.html
+++ b/project/templates/legal/add/index.html
@@ -9,8 +9,11 @@
           <h3 class="panel-title">Add License</h3>
         </div>
         <div class="panel-body">
-          <form role="form" method="post" action="#">
+          <form role="form" method="post" action="/legal/licenses/add.do">
             <fieldset>
+              <div class="form-group">
+<input class="form-control" placeholder="License" name="license" type="text" autofocus>
+</div>
               <div class="form-group">
 <input class="form-control" placeholder="Description" name="description" type="text" autofocus>
 </div>
@@ -38,7 +41,7 @@
 <div class="form-group">
 <input class="form-control" placeholder="URL" name="url" type="text" autofocus>
 </div>
-              <button style="background-color:rgb(209,55,55); color: white" class="btn btn-lg btn-block">Submit</button>
+              <button style="background-color:rgb(189,45,76); color: white" class="btn btn-lg btn-block">Submit</button>
             </fieldset>
             <input type="hidden" name="csrf_token" value="{{ csrf_token() }}"/>
           </form>
