--- a/project/templates/login/index.html
+++ b/project/templates/login/index.html
@@ -12,12 +12,12 @@
           <form role="form" method="post" action="/login/verify.do">
             <fieldset>
               <div class="form-group">
-                <input class="form-control" placeholder="Corporate Key" name="username" type="username" autofocus>
+                <input class="form-control" placeholder="User Name" name="username" type="username" autofocus>
               </div>
               <div class="form-group">
                 <input class="form-control" placeholder="Password" name="password" type="password">
               </div>
-              <button style="background-color:rgb(209,55,55); color: white" class="btn btn-lg btn-block">Login</button>
+              <button style="background-color:rgb(189,45,76); color: white" class="btn btn-lg btn-block">Login</button>
             </fieldset>
             <input type="hidden" name="csrf_token" value="{{ csrf_token() }}"/>
           </form>
